Updated Text - final?

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="bioPic">
                 </div>
                 <div class="bioText">
-                    <p>I am a feedback-driven editorial and social media manager focused on community engagement, quality content, and collaboration.</p>
+                    <p>I am a feedback-driven editorial, community, and social media manager focused on community engagement, quality content, and collaboration.</p>
                 </div>
             </div> 
             <div id="university" class="bioInfo">
@@ -69,9 +69,9 @@
                 <img border="0" alt="ULol logo" src="Assets/ULoL.jpg"></img>
             </div>
             <div class="jobtext">
-                <h2>Collegiate Editorial Consultant</h2>
+                <h2>Collegiate Editorial</h2>
                 <h3>Riot Games</h3>
-                <h4>August 2015 - Present</h4>
+                <h4>August 2015 - September 2016</h4>
                 <ul>
                     <li>Supervise freelancers to ensure on-time delivery, quality, and tone</li>
                     <li>Develop content and engagement opportunities through social media channels</li>
