Final Text - Fixed Caps

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="portpic">
             </div>
             <div class="porttext">
-                <h2><a href="https://ulol.na.leagueoflegends.com/news/5-ways-lol-taught-you-to-survive-college" target="_blank">The LoL player's survival guide to freshman year</a></h2>
+                <h2><a href="https://ulol.na.leagueoflegends.com/news/5-ways-lol-taught-you-to-survive-college" target="_blank">The LoL Player's Survival Guide to Freshman Year</a></h2>
                 <a href="https://ulol.na.leagueoflegends.com/news/5-ways-lol-taught-you-to-survive-college" target="_blank">
                     <img src="Assets/freshman.jpg" alt="">
                 </a>
